[project]
name = "support_inbox_env"
version = "0.1.0"
description = "Customer support OpenEnv environment"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openenv-core"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project.scripts]
server = "server.app:main"